# veilmail-rust

./: Cargo.toml  README.md
examples/actix-auth/: README.md
examples/actix-auth/src/: mail.rs
src/: error.rs  http.rs  lib.rs  webhook.rs
src/resources/: analytics.rs  audiences.rs  campaigns.rs  domains.rs  emails.rs  feeds.rs  forms.rs  mod.rs  properties.rs  sequences.rs  templates.rs  topics.rs  webhooks.rs
