[package]
name = "veilmail"
version = "0.1.0"
edition = "2021"
description = "Official Rust SDK for the Veil Mail API"
license = "MIT"
repository = "https://github.com/Resonia-Health/veilmail-rust"
homepage = "https://veilmail.xyz"
keywords = ["email", "veilmail", "api", "sdk"]
categories = ["api-bindings", "email"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
